resources/ext.gettingstarted.css
/********************* Root Onboarding Container *********************/
.onboarding-container {
	width: 60em;
	margin: 1em 0;
}

#mw-returnto a {
	display: inline-block;
	font-size: 0.8em;
	margin-top: 3.5em;
}

/********************* Question Marks *********************/
.client-nojs .onboarding-help {
	display: none;
}

.onboarding-help {
	display: inline-block;
}

.onboarding-help img {
	opacity: 0.6;
}

.onboarding-help img:hover {
	cursor: pointer;
	opacity: 1;
}

/********************* Header Banner *********************/
.onboarding-header {
	font-weight: normal;
}

/********************* To-do matrix *********************/

#onboarding-tasks {
	margin: 0 auto;
	margin-top: 30px;
	width: 100%;
}

#onboarding-tasks li {
	display: inline-block;
	margin-right: 3em;
	width: 16em;
	text-align: center;
}

.onboarding-article-list {
	width: 100%;
	margin-left: 0;
	border-top: 1px solid #ddd;
}

#onboarding-tasks .onboarding-article-list li {
	padding: 0;
	text-align: left;
}

#onboarding-tasks .onboarding-article-list li:hover {
	background-color: #efefef;
}

#onboarding-tasks .onboarding-article-list li a {
	display: block;
	margin: 0.5em 1em;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	text-decoration: none;
}

/********************* CentralAuth *********************/

.centralauth-login-box {
	visibility: hidden;
	color: gray;
	font-size: 0.75em;
	margin-top: 8em;
}
.centralauth-login-box img {
	border: 0;
	opacity: 0.5;
	-webkit-filter: grayscale(100%);
	-moz-filter: grayscale(100%);
	-o-filter: grayscale(100%);
}
.centralauth-login-box img:hover {
	opacity: 1;
	-webkit-filter: grayscale(0%);
	-moz-filter: grayscale(0%);
	-o-filter: grayscale(0%);
}

/********************* Notifications *********************/
/* Core currently doesn't offer any more stable selector. */
#mw-content-text > p {
	font-size: 0.8em;
	color: gray;
}

